--- a/packages/suika/src/components/Header/components/Title/style.scss
+++ b/packages/suika/src/components/Header/components/Title/style.scss
@@ -8,10 +8,12 @@
     align-items: center;
     color: #0f8fff;
     user-select: none;
-    a {
-      margin-left: 4px;
-      text-decoration: none;
-      color: #0f8fff;
+
+    .sk-header-title-content {
+      max-width: 315px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
